...
  return (
    <Stack.Navigator>
      <Stack.Screen
        name="AssetsHome"
        component={AssetsScreen}
        options={{
          title: 'Assets',
          headerLeft: () => <BurgerMenuButton />,
        }}
      />
      <Stack.Screen
        name="AssetDetail"
        component={AssetDetailScreen}
...
        <Stack.Navigator>
          {showInstanceSelection ? (
            <>
              <Stack.Screen
                name="InstanceSelection"
                component={InstanceSelectionScreen}
                options={{ title: 'Select Pimcore Instance' }}
              />
              <Stack.Screen
                name="AddInstance"
                component={AddEditInstanceScreen}
                options={{ title: 'Add Instance' }}
              />
...
